CompiladorLenguaje/src/vicky/parser/LenguajesParser.java
// Generated from Lenguajes.g4 by ANTLR 4.8
package vicky.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LenguajesParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CLASE=1, ENTERO=2, PRINT=3, IF=4, ELSE=5, WHILE=6, LIBRERIA=7, AND=8, 
		OR=9, NOT=10, TRUE=11, FALSE=12, INCREMENTO=13, DECREMENTO=14, ID=15, 
		STRING=16, LINE_COMMENT=17, COMMENT=18, MAYOR_QUE=19, MENOR_QUE=20, MAYOR_IGUAL_QUE=21, 
		MENOR_IGUAL_QUE=22, IGUAL_QUE=23, DIFERENTE_QUE=24, IGUAL=25, POR=26, 
		DIV=27, MAS=28, MENOS=29, INT=30, FLOAT=31, LL_A=32, LL_C=33, PAR_A=34, 
		PAR_C=35, PYC=36, ESPACIOS=37;
	public static final int
		RULE_inicio = 0, RULE_bloque = 1, RULE_llave_abierta = 2, RULE_llave_cerrada = 3, 
		RULE_instrucciones = 4, RULE_condicion_if = 5, RULE_condicion = 6, RULE_bloque_condicion = 7, 
		RULE_declarar = 8, RULE_asignar = 9, RULE_declarar_asignar = 10, RULE_condicion_while = 11, 
		RULE_imprimir = 12, RULE_string = 13, RULE_operacion = 14, RULE_expr = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"inicio", "bloque", "llave_abierta", "llave_cerrada", "instrucciones", 
			"condicion_if", "condicion", "bloque_condicion", "declarar", "asignar", 
			"declarar_asignar", "condicion_while", "imprimir", "string", "operacion", 
			"expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Kukin'", "'bigote'", "'corre'", "'if'", "'else'", "'while'", 
			"'libreria asies'", "'&&'", "'||'", "'!'", "'true'", "'false'", "'++'", 
			"'--'", null, null, null, null, "'>'", "'<'", "'>='", "'<='", "'=='", 
			"'!='", "'='", "'*'", "'/'", "'+'", "'-'", null, null, "'{'", "'}'", 
			"'('", "')'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CLASE", "ENTERO", "PRINT", "IF", "ELSE", "WHILE", "LIBRERIA", 
			"AND", "OR", "NOT", "TRUE", "FALSE", "INCREMENTO", "DECREMENTO", "ID", 
			"STRING", "LINE_COMMENT", "COMMENT", "MAYOR_QUE", "MENOR_QUE", "MAYOR_IGUAL_QUE", 
			"MENOR_IGUAL_QUE", "IGUAL_QUE", "DIFERENTE_QUE", "IGUAL", "POR", "DIV", 
			"MAS", "MENOS", "INT", "FLOAT", "LL_A", "LL_C", "PAR_A", "PAR_C", "PYC", 
			"ESPACIOS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Lenguajes.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LenguajesParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class InicioContext extends ParserRuleContext {
		public TerminalNode CLASE() { return getToken(LenguajesParser.CLASE, 0); }
		public TerminalNode ID() { return getToken(LenguajesParser.ID, 0); }
		public TerminalNode PAR_A() { return getToken(LenguajesParser.PAR_A, 0); }
		public TerminalNode PAR_C() { return getToken(LenguajesParser.PAR_C, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public TerminalNode LIBRERIA() { return getToken(LenguajesParser.LIBRERIA, 0); }
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajesVisitor ) return ((LenguajesVisitor<? extends T>)visitor).visitInicio(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InicioContext inicio() throws RecognitionException {
		InicioContext _localctx = new InicioContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inicio);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LIBRERIA) {
				{
				setState(32);
				match(LIBRERIA);
				}
			}

			setState(35);
			match(CLASE);
			setState(36);
			match(ID);
			setState(37);
			match(PAR_A);
			setState(38);
			match(PAR_C);
			setState(39);
			bloque();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BloqueContext extends ParserRuleContext {
		public Llave_abiertaContext llave_abierta() {
			return getRuleContext(Llave_abiertaContext.class,0);
		}
		public Llave_cerradaContext llave_cerrada() {
			return getRuleContext(Llave_cerradaContext.class,0);
		}
		public List<InstruccionesContext> instrucciones() {
			return getRuleContexts(InstruccionesContext.class);
		}
		public InstruccionesContext instrucciones(int i) {
			return getRuleContext(InstruccionesContext.class,i);
		}
		public BloqueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajesVisitor ) return ((LenguajesVisitor<? extends T>)visitor).visitBloque(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BloqueContext bloque() throws RecognitionException {
		BloqueContext _localctx = new BloqueContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_bloque);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			llave_abierta();
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ENTERO) | (1L << PRINT) | (1L << IF) | (1L << WHILE) | (1L << ID) | (1L << LL_A))) != 0)) {
				{
				{
				setState(42);
				instrucciones();
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(48);
			llave_cerrada();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Llave_abiertaContext extends ParserRuleContext {
		public TerminalNode LL_A() { return getToken(LenguajesParser.LL_A, 0); }
		public Llave_abiertaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_llave_abierta; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajesVisitor ) return ((LenguajesVisitor<? extends T>)visitor).visitLlave_abierta(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Llave_abiertaContext llave_abierta() throws RecognitionException {
		Llave_abiertaContext _localctx = new Llave_abiertaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_llave_abierta);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(LL_A);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Llave_cerradaContext extends ParserRuleContext {
		public TerminalNode LL_C() { return getToken(LenguajesParser.LL_C, 0); }
		public Llave_cerradaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_llave_cerrada; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajesVisitor ) return ((LenguajesVisitor<? extends T>)visitor).visitLlave_cerrada(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Llave_cerradaContext llave_cerrada() throws RecognitionException {
		Llave_cerradaContext _localctx = new Llave_cerradaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_llave_cerrada);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(LL_C);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstruccionesContext extends ParserRuleContext {
		public DeclararContext declarar() {
			return getRuleContext(DeclararContext.class,0);
		}
		public AsignarContext asignar() {
			return getRuleContext(AsignarContext.class,0);
		}
		public Declarar_asignarContext declarar_asignar() {
			return getRuleContext(Declarar_asignarContext.class,0);
		}
		public ImprimirContext imprimir() {
			return getRuleContext(ImprimirContext.class,0);
		}
		public Condicion_ifContext condicion_if() {
			return getRuleContext(Condicion_ifContext.class,0);
		}
		public Condicion_whileContext condicion_while() {
			return getRuleContext(Condicion_whileContext.class,0);
		}
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public InstruccionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucciones; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajesVisitor ) return ((LenguajesVisitor<? extends T>)visitor).visitInstrucciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstruccionesContext instrucciones() throws RecognitionException {
		InstruccionesContext _localctx = new InstruccionesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_instrucciones);
		try {
			setState(61);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				declarar();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				asignar();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(56);
				declarar_asignar();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(57);
				imprimir();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(58);
				condicion_if();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(59);
				condicion_while();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(60);
				bloque();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Condicion_ifContext extends ParserRuleContext {
		public List<TerminalNode> IF() { return getTokens(LenguajesParser.IF); }
		public TerminalNode IF(int i) {
			return getToken(LenguajesParser.IF, i);
		}
		public List<CondicionContext> condicion() {
			return getRuleContexts(CondicionContext.class);
		}
		public CondicionContext condicion(int i) {
			return getRuleContext(CondicionContext.class,i);
		}
		public List<TerminalNode> ELSE() { return getTokens(LenguajesParser.ELSE); }
		public TerminalNode ELSE(int i) {
			return getToken(LenguajesParser.ELSE, i);
		}
		public Bloque_condicionContext bloque_condicion() {
			return getRuleContext(Bloque_condicionContext.class,0);
		}
		public Condicion_ifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicion_if; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajesVisitor ) return ((LenguajesVisitor<? extends T>)visitor).visitCondicion_if(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Condicion_ifContext condicion_if() throws RecognitionException {
		Condicion_ifContext _localctx = new Condicion_ifContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_condicion_if);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(IF);
			setState(64);
			condicion();
			setState(70);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(65);
					match(ELSE);
					setState(66);
					match(IF);
					setState(67);
					condicion();
					}
					} 
				}
				setState(72);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(73);
				match(ELSE);
				setState(74);
				bloque_condicion();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicionContext extends ParserRuleContext {
		public TerminalNode PAR_A() { return getToken(LenguajesParser.PAR_A, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PAR_C() { return getToken(LenguajesParser.PAR_C, 0); }
		public Bloque_condicionContext bloque_condicion() {
			return getRuleContext(Bloque_condicionContext.class,0);
		}
		public CondicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajesVisitor ) return ((LenguajesVisitor<? extends T>)visitor).visitCondicion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondicionContext condicion() throws RecognitionException {
		CondicionContext _localctx = new CondicionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_condicion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(PAR_A);
			setState(78);
			expr(0);
			setState(79);
			match(PAR_C);
			setState(80);
			bloque_condicion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Bloque_condicionContext extends ParserRuleContext {
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public Bloque_condicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque_condicion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajesVisitor ) return ((LenguajesVisitor<? extends T>)visitor).visitBloque_condicion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Bloque_condicionContext bloque_condicion() throws RecognitionException {
		Bloque_condicionContext _localctx = new Bloque_condicionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_bloque_condicion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			bloque();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclararContext extends ParserRuleContext {
		public DeclararContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarar; }
	 
		public DeclararContext() { }
		public void copyFrom(DeclararContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclaracionContext extends DeclararContext {
		public TerminalNode ENTERO() { return getToken(LenguajesParser.ENTERO, 0); }
		public TerminalNode ID() { return getToken(LenguajesParser.ID, 0); }
		public TerminalNode PYC() { return getToken(LenguajesParser.PYC, 0); }
		public DeclaracionContext(DeclararContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajesVisitor ) return ((LenguajesVisitor<? extends T>)visitor).visitDeclaracion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclararContext declarar() throws RecognitionException {
		DeclararContext _localctx = new DeclararContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_declarar);
		try {
			_localctx = new DeclaracionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(ENTERO);
			setState(85);
			match(ID);
			setState(86);
			match(PYC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignarContext extends ParserRuleContext {
		public AsignarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignar; }
	 
		public AsignarContext() { }
		public void copyFrom(AsignarContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AsignacionContext extends AsignarContext {
		public TerminalNode ID() { return getToken(LenguajesParser.ID, 0); }
		public TerminalNode IGUAL() { return getToken(LenguajesParser.IGUAL, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PYC() { return getToken(LenguajesParser.PYC, 0); }
		public AsignacionContext(AsignarContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajesVisitor ) return ((LenguajesVisitor<? extends T>)visitor).visitAsignacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsignarContext asignar() throws RecognitionException {
		AsignarContext _localctx = new AsignarContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_asignar);
		try {
			_localctx = new AsignacionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(ID);
			setState(89);
			match(IGUAL);
			setState(90);
			expr(0);
			setState(91);
			match(PYC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declarar_asignarContext extends ParserRuleContext {
		public Declarar_asignarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarar_asignar; }
	 
		public Declarar_asignarContext() { }
		public void copyFrom(Declarar_asignarContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Asignacion2Context extends Declarar_asignarContext {
		public TerminalNode ENTERO() { return getToken(LenguajesParser.ENTERO, 0); }
		public TerminalNode ID() { return getToken(LenguajesParser.ID, 0); }
		public TerminalNode IGUAL() { return getToken(LenguajesParser.IGUAL, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PYC() { return getToken(LenguajesParser.PYC, 0); }
		public Asignacion2Context(Declarar_asignarContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajesVisitor ) return ((LenguajesVisitor<? extends T>)visitor).visitAsignacion2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declarar_asignarContext declarar_asignar() throws RecognitionException {
		Declarar_asignarContext _localctx = new Declarar_asignarContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_declarar_asignar);
		try {
			_localctx = new Asignacion2Context(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(ENTERO);
			setState(94);
			match(ID);
			setState(95);
			match(IGUAL);
			setState(96);
			expr(0);
			setState(97);
			match(PYC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Condicion_whileContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(LenguajesParser.WHILE, 0); }
		public TerminalNode PAR_A() { return getToken(LenguajesParser.PAR_A, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PAR_C() { return getToken(LenguajesParser.PAR_C, 0); }
		public Bloque_condicionContext bloque_condicion() {
			return getRuleContext(Bloque_condicionContext.class,0);
		}
		public Condicion_whileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicion_while; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajesVisitor ) return ((LenguajesVisitor<? extends T>)visitor).visitCondicion_while(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Condicion_whileContext condicion_while() throws RecognitionException {
		Condicion_whileContext _localctx = new Condicion_whileContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_condicion_while);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(WHILE);
			setState(100);
			match(PAR_A);
			setState(101);
			expr(0);
			setState(102);
			match(PAR_C);
			setState(103);
			bloque_condicion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImprimirContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(LenguajesParser.PRINT, 0); }
		public TerminalNode PYC() { return getToken(LenguajesParser.PYC, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public OperacionContext operacion() {
			return getRuleContext(OperacionContext.class,0);
		}
		public ImprimirContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imprimir; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajesVisitor ) return ((LenguajesVisitor<? extends T>)visitor).visitImprimir(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImprimirContext imprimir() throws RecognitionException {
		ImprimirContext _localctx = new ImprimirContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_imprimir);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(PRINT);
			setState(108);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(106);
				string();
				}
				break;
			case 2:
				{
				setState(107);
				operacion();
				}
				break;
			}
			setState(110);
			match(PYC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringContext extends ParserRuleContext {
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
	 
		public StringContext() { }
		public void copyFrom(StringContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CorreContext extends StringContext {
		public TerminalNode PAR_A() { return getToken(LenguajesParser.PAR_A, 0); }
		public TerminalNode STRING() { return getToken(LenguajesParser.STRING, 0); }
		public TerminalNode PAR_C() { return getToken(LenguajesParser.PAR_C, 0); }
		public CorreContext(StringContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajesVisitor ) return ((LenguajesVisitor<? extends T>)visitor).visitCorre(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_string);
		try {
			_localctx = new CorreContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(PAR_A);
			setState(113);
			match(STRING);
			setState(114);
			match(PAR_C);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperacionContext extends ParserRuleContext {
		public OperacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operacion; }
	 
		public OperacionContext() { }
		public void copyFrom(OperacionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Corre2Context extends OperacionContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Corre2Context(OperacionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajesVisitor ) return ((LenguajesVisitor<? extends T>)visitor).visitCorre2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperacionContext operacion() throws RecognitionException {
		OperacionContext _localctx = new OperacionContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_operacion);
		try {
			_localctx = new Corre2Context(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MulDivContext extends ExprContext {
		public Token op;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode POR() { return getToken(LenguajesParser.POR, 0); }
		public TerminalNode DIV() { return getToken(LenguajesParser.DIV, 0); }
		public MulDivContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajesVisitor ) return ((LenguajesVisitor<? extends T>)visitor).visitMulDiv(this);
